# uliege_hpc_proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio.job  buffer.c  buffer.h  combine_datfiles.py  data.c  data.h  fdtd.c  fdtd.h  fdtd_instr  init.c  init.h  init.sh  main.c  output.c  output.h  parameters.c  parameters.h  requirements.txt  runner.job  scalasca.job  sending.c  sending.h  simulation.c  simulation.h  slit.job  types.h  utilities.c  utilities.h
example_inputs/mpi3d/: param_3d.txt
example_inputs/test2/: param_3d.txt
example_inputs/testing3d/: param_3d.txt
inputs/scalasca/: scorep.filter
inputs/scalasca/scorep_fdtd_instr_27_sum/: scorep.score
inputs/scalasca/scorep_fdtd_instr_Ox16_sum/: profile.cubex  scorep.cfg  scorep.score  summary.cubex
inputs/scalasca/scorep_old/: profile.cubex  scorep.cfg  scorep.score  summary.cubex
inputs/simple3d/: param_3d.txt
inputs/slits/: param_slit_1x.txt
inputs/testing3d/: param_3d.txt
